import decimal
import uuid
from dataclasses import dataclass, field
from typing import Any, Literal

from pydantic import BaseModel, Field, field_validator, model_validator
from pydantic.alias_generators import to_snake

from ..constants import (
    MAX_DIFFICULTY_VALUE,
    MAX_USEFULNESS_VALUE,
    MIN_DIFFICULTY_VALUE,
    MIN_USEFULNESS_VALUE,
)
from ..models.choices import CourseStatus, CourseTypeKind, EducationLevel, SemesterTerm
from .pagination import PaginationMetadata

AvgOrder = Literal["asc", "desc"]


# needs external validation
class CourseReadParams(BaseModel):
    model_config = {
        "alias_generator": to_snake,
        "populate_by_name": True,
    }

    course_id: uuid.UUID = Field(description="A unique identifier for the course")


# needs external validation
class CourseFilterCriteria(BaseModel):
    model_config = {
        "alias_generator": to_snake,
        "populate_by_name": True,
    }

    name: str | None = Field(default=None, description="Filter by course name")
    type_kind: CourseTypeKind | None = Field(
        default=None,
        description="Course type kind (COMPULSORY, ELECTIVE, PROF_ORIENTED)",
    )
    instructor: uuid.UUID | None = Field(default=None, description="Filter by instructor UUID")
    faculty: uuid.UUID | None = Field(default=None, description="Filter by faculty UUID")
    department: uuid.UUID | None = Field(default=None, description="Filter by department UUID")
    speciality: uuid.UUID | None = Field(default=None, description="Filter by speciality UUID")
    education_level: EducationLevel | None = Field(
        default=None, description="Filter by education level (BACHELOR, MASTER)"
    )
    semester_year: str | None = Field(
        default=None, description="Academic year range (e.g., '2024–2025')"
    )
    semester_terms: list[SemesterTerm] | None = Field(
        default=None,
        description="Semester terms to filter by (FALL, SPRING, SUMMER)",
    )
    credits_max: decimal.Decimal | None = Field(
        default=None,
        gt=0,
        description="Maximum ECTS credits for course offering (requires semester_year)",
    )
    credits_min: decimal.Decimal | None = Field(
        default=None,
        gt=0,
        description="Minimum ECTS credits for course offering (requires semester_year)",
    )
    avg_difficulty_min: float | None = Field(
        default=None,
        ge=MIN_DIFFICULTY_VALUE,
        le=MAX_DIFFICULTY_VALUE,
        description="Minimum average difficulty (1.0 - 5.0)",
    )
    avg_difficulty_max: float | None = Field(
        default=None,
        ge=MIN_DIFFICULTY_VALUE,
        le=MAX_DIFFICULTY_VALUE,
        description="Maximum average difficulty (1.0 - 5.0)",
    )
    avg_usefulness_min: float | None = Field(
        default=None,
        ge=MIN_USEFULNESS_VALUE,
        le=MAX_USEFULNESS_VALUE,
        description="Minimum average usefulness (1.0 - 5.0)",
    )
    avg_usefulness_max: float | None = Field(
        default=None,
        ge=MIN_USEFULNESS_VALUE,
        le=MAX_USEFULNESS_VALUE,
        description="Maximum average usefulness (1.0 - 5.0)",
    )
    ratings_count_min: int | None = Field(
        default=None,
        ge=0,
        description="Minimum ratings count (0+)",
    )
    avg_difficulty_order: AvgOrder | None = Field(
        default=None, description="Sort order for difficulty (asc/desc)"
    )
    avg_usefulness_order: AvgOrder | None = Field(
        default=None, description="Sort order for usefulness (asc/desc)"
    )
    ratings_count_order: AvgOrder | None = Field(
        default=None, description="Sort order for review count (asc/desc)"
    )
    last_review_order: AvgOrder | None = Field(
        default=None,
        description="Sort order for most recent review timestamp (asc/desc); "
        "courses without reviews appear last in both directions",
    )
    page: int | None = Field(default=1, ge=1, description="Page number")
    page_size: int | None = Field(default=None, ge=1, description="Items per page")

    @model_validator(mode="after")
    def validate_type_kind_requires_speciality(self):
        if self.type_kind and not self.speciality:
            raise ValueError("speciality is required when type_kind is provided")
        return self

    @model_validator(mode="after")
    def validate_credits_requires_semester_year(self):
        if (
            self.credits_min is not None or self.credits_max is not None
        ) and not self.semester_year:
            raise ValueError("semester_year is required when credits range is provided")
        if (
            self.credits_min is not None
            and self.credits_max is not None
            and self.credits_min > self.credits_max
        ):
            raise ValueError("credits_min cannot be greater than credits_max")
        return self

    @field_validator("semester_terms", mode="before")
    @classmethod
    def normalize_semester_terms(cls, value):
        if isinstance(value, list):
            return [v.upper() if isinstance(v, str) else v for v in value]
        if isinstance(value, str):
            return [value.upper()]
        return value

    @field_validator(
        "avg_difficulty_order",
        "avg_usefulness_order",
        "ratings_count_order",
        "last_review_order",
        mode="before",
    )
    @classmethod
    def normalize_sort_order(cls, value):
        if isinstance(value, str):
            return value.lower()
        return value


# Internal schema for service/repository layer
class CourseFilterCriteriaInternal(CourseFilterCriteria):
    """Internal filter criteria with service-layer-only fields."""

    exclude_type_kinds: list[CourseTypeKind] | None = Field(
        default=None,
        description="Exclude courses with these type "
        "kinds for the given speciality (internal use only)",
    )


@dataclass(frozen=True)
class CourseOfferingSpeciality:
    speciality_id: str
    speciality_title: str
    faculty_id: str
    faculty_name: str
    speciality_alias: str | None
    type_kind: CourseTypeKind


@dataclass(frozen=True)
class CourseInput:
    title: str
    description: str
    status: CourseStatus
    education_level: EducationLevel | None
    department: str
    department_name: str
    faculty: str
    faculty_name: str


_DEFAULT_DESCRIPTION = (
    "Rate UKMA — платформа для студентів НаУКМА, де можна ділитися відгуками та оцінками курсів."
)

_DESCRIPTION_LEN_LIMIT = 120


@dataclass(frozen=True)
class Course:
    id: str
    title: str
    description: str
    status: CourseStatus
    education_level: EducationLevel | None
    department: str
    department_name: str
    faculty: str
    faculty_name: str
    faculty_custom_abbreviation: str | None = None
    specialities: list[CourseOfferingSpeciality] = field(default_factory=list)
    avg_difficulty: decimal.Decimal | None = None
    avg_usefulness: decimal.Decimal | None = None
    ratings_count: int | None = 0

    @property
    def short_description(self) -> str:
        if self.description:
            suffix = "..." if len(self.description) > _DESCRIPTION_LEN_LIMIT else ""
            return self.description[:_DESCRIPTION_LEN_LIMIT] + suffix

        parts = [
            self.department_name,
            f"{self.ratings_count} відгуків" if self.ratings_count is not None else None,
            f"складність {float(self.avg_difficulty):.1f}/5"
            if self.avg_difficulty is not None
            else None,
            f"корисність {float(self.avg_usefulness):.1f}/5"
            if self.avg_usefulness is not None
            else None,
        ]

        return " · ".join(p for p in parts if p) or _DEFAULT_DESCRIPTION


# is constructed internally
@dataclass(frozen=True)
class CourseSearchResult:
    items: list[Course]
    pagination: PaginationMetadata
    applied_filters: dict[str, Any]


# is constructed internally
@dataclass(frozen=True)
class CourseFilterOptions:
    instructors: list[dict[str, Any]]
    faculties: list[dict[str, Any]]
    semester_terms: list[dict[str, Any]]
    semester_years: list[dict[str, Any]]
    course_types: list[dict[str, Any]]
