@startuml core-domain-model
title Rate UKMA – Domain Model (v1.0)
left to right direction

class User {
  +id    : UUID [1]
  +email : Email [1]
}

abstract class Person {
  +id         : UUID [1]
  +firstName  : string [1]
  +patronymic : string [0..1]
  +lastName   : string [1]
}

class Student {
  +educationLevel : EducationLevel [1]
  /overallRatedCourses : int
  /ratedCoursesThisSem : int
}
User "1" -- "0..1" Student
Student "*" -- "1" Speciality
Student --|> Person

class Instructor {
  +email : Email [1]
}
Instructor --|> Person

class Faculty {
  +id   : UUID [1]
  +name : string [1]
  +custom_abbreviation: string [1]
}

class Department {
  +id   : UUID [1]
  +name : string [1]
}
Department "*" -- "1" Faculty

class Speciality {
  +id   : UUID [1]
  +name : string [1]
  +alias : string [1]
}
Speciality "*" -- "1" Faculty

class Course {
  +id           : UUID [1]
  +title        : string [1]
  +description  : text [0..1]
  +status       : CourseStatus [1]
  /avgDifficulty : float
  /avgUsefulness : float
  /ratingsCount  : int
}
Course "*" -- "1" Department

class Semester {
  +id   : UUID [1]
  +year : int [1]
  +term : SemesterTerm [1]
  {unique} (year, term)
}

class CourseOffering {
  +id            : UUID [1]
  +code          : string [1]
  +credits       : float [1]
  +weeklyHours   : int [1]
  +lectureCount  : int [0..1]
  +practiceCount : int [0..1]
  +practiceType  : PracticeType [0..1]
  +examType      : ExamType [1]
  +maxStudents   : int [0..1]
  +maxGroups     : int [0..1]
  +groupSizeMin  : int [0..1]
  +groupSizeMax  : int [0..1]
  /occupiedSeats : int
  /freeSeats     : int
}
Course "1"   -- "*" CourseOffering
Semester "1" -- "*" CourseOffering


class CourseOfferingSpeciality {
  +id           : UUID [1]
  +typeKind         : CourseTypeKind[1]
  {unique} (courseOffering, speciality)
}
CourseOfferingSpeciality "*" -- "1" CourseOffering
CourseOfferingSpeciality "*" -- "1" Speciality

class CourseInstructor {
  +id: UUID [1]
  +role: InstructorRole [1]
  {unique} (courseOffering, instructor, role)
}
CourseOffering "1" -- "*" CourseInstructor
Instructor "1" -- "*" CourseInstructor

class Enrollment {
  +id         : UUID [1]
  +status     : EnrollmentStatus [1]
  +enrolledAt : datetime [1]
  {unique} (student, courseOffering)
}
Student "1"        -- "*" Enrollment
CourseOffering "1" -- "*" Enrollment

class Rating {
  +id         : UUID [1]
  +difficulty : int [1]    ' 1–5
  +usefulness : int [1]    ' 1–5
  +comment    : text [0..1]
  +createdAt  : datetime [1]
  +isAnonymous : bool [1] = false
  {unique} (student, courseOffering)
}
Student "1" -- "*" Rating
CourseOffering  "1" -- "*" Rating

class Vote {
  +id : UUID [1]
  +type : VoteType
  {unique} (student, rating)
}

Student "1" -- "*" Vote
Rating "1" -- "*" Vote

enum EducationLevel {
  Bachelor
  Master
}

enum CourseStatus {
  Planned
  Active
  Finished
}

enum CourseTypeKind {
  Compulsory
  Elective
  ProfOriented
}

enum SemesterTerm {
  Fall
  Spring
  Summer
}

enum ExamType {
  Exam
  Credit
}

enum PracticeType {
  Practice
  Seminar
}

enum EnrollmentStatus {
  Enrolled
  Dropped
  Forced
}

enum InstructorRole {
  LectureInstructor
  PracticumInstructor
}

enum VoteType {
  UPVOTE
  DOWNVOTE
}
@enduml